Bug fix: 修正状态检测逻辑
1. 移除错误的checkRefreshStatus
   - 原 checkRefreshStatus 方法通过 topicCache.getIfPresent 检测刷新完成不可靠
   - 该方法错误地将缓存存在视为刷新完成，导致状态误判

2. 重构状态确认
   - 新增 markCompleted/markRetry 方法在 reload 回调中精确更新状态
   - 在 processDirtyTopics 中增加超时检测，避免无限重试

3. 优化错误处理流程
   - 刷新失败时通过 markRetry 重新加入队列
   - 超时topic直接标记完成并报出错误日志，避免阻塞